# buildimage

./: .gitignore  README.md  pyproject.toml
src/buildimage/: __init__.py  __main__.py  schema.py
tests/: test_build.py
tests/deployment/: kustomize.yaml
tests/deployment.org/: kustomize.yaml  values.yaml
tests/docker/: Dockerfile  images-large-version.yaml  images.yaml
tests/docker/test-image-1/: Dockerfile
tests/docker/test-image-3/: Dockerfile
