[project]
name = "buildimage"
version = "0.1.0"
description = "Build Docker images for use in Kubernetes deployments"
readme = "README.md"
authors = [
    { name = "Lars Berntzon", email = "lars.berntzon@external.atlascopco.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
buildimage = "buildimage:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
