[project]
name = "buildimage"
version = "1.2.0"
description = "Build Docker images for use in Kubernetes deployments"
readme = "README.md"
authors = [
    { name = "Lars Berntzon", email = "lars.berntzon@cecilia-data.se" }
]

classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]

requires-python = ">=3.10"

dependencies = [
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
]
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/martinpitt/python-dbusmock"

[project.scripts]
buildimage = "buildimage.__main__:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bumpver>=2025.1131",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[tool.bumpver]
current_version = "1.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false
#tag_message = "{new_version}"
#tag_scope = "default"
#pre_commit_hook = ""
#post_commit_hook = ""
# commit = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/buildimage/__init__.py" = [
    '^__version__ = "{version}"$',
]
